--- a/Conqueror/index.html
+++ b/Conqueror/index.html
@@ -19,6 +19,8 @@
 					<p>Un paraiso para ti, ¿no? Pues no todo es como lo crees, porque si participas en 3 trivias y te equivocas aunque sea una vez en cada una, seras eliminado de la historia, pero si logras superar las 7 trivias continentales, lograras unificar el mundo y seras rigente de el mismo para que lo gobiernes con tu mente ilustre.</p>
 					<h2>Creditos</h2>
 					<p>Carlos Arturo Obregón Ravelo</p>
+					<p>Carlos Plaza</p>
+					<p>NN</p>
 				</div>
 			</div>
 		</div>
